# Neuro_Symbolic_GRAND

./: .gitignore  .gitignore.pre_v2.bak  FIR_venv_install_notes.md  NEXT_STEP_INSTRUCTIONS.md  README.md  V3_UPDATE_NOTES.md  V4_UPDATE_NOTES.md  probe_fir_env.sh  pyproject.toml  requirements_fir_py312.lock.txt  requirements_fir_py312_pypi.txt  requirements_fir_py312_wheelhouse.txt  setup_fir_venv_py312.sh  slurm-nsgrand_full-34208097.out  slurm-nsgrand_smoke-34206738.out  verify_fir_env.py
configs/: fir_full.yaml  fir_smoke.yaml  fir_v2_full.yaml  fir_v2_smoke.yaml  fir_v3_full.yaml  fir_v3_smoke.yaml  fir_v4_full.yaml  fir_v4_smoke.yaml
neuro_symbolic_grand/: __init__.py  cli.py  config.py
neuro_symbolic_grand/analysis/: __init__.py  reporting.py
neuro_symbolic_grand/channels/: __init__.py  factory.py  fallback.py  simulator.py  sionna_tdl.py
neuro_symbolic_grand/codes/: __init__.py  systematic_sparse.py
scripts/: activate_env.sh  cleanup_before_v3_run.sh  cleanup_before_v4_run.sh  cleanup_repo_for_git.sh  run_fir_pipeline.sh  run_fir_v2_pipeline.sh  run_fir_v3_pipeline.sh  run_fir_v4_pipeline.sh  run_smoke.sh  run_v2_smoke.sh  run_v3_smoke.sh  run_v4_smoke.sh
slurm/: fir_nsgrand_pipeline.sbatch  fir_nsgrand_report.sbatch  fir_nsgrand_smoke.sbatch  fir_nsgrand_v2_pipeline.sbatch  fir_nsgrand_v2_report.sbatch  fir_nsgrand_v2_smoke.sbatch  fir_nsgrand_v3_pipeline.sbatch  fir_nsgrand_v3_report.sbatch  fir_nsgrand_v3_smoke.sbatch  fir_nsgrand_v4_pipeline.sbatch  fir_nsgrand_v4_report.sbatch  fir_nsgrand_v4_smoke.sbatch
tests/: test_code_and_decoder.py
(+684 files in other folders)
